<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="f.ratnatech.yowapplication.Activity.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:popupTheme="@style/MyDarkToolbarStyle"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@android:color/black">

        <TextView
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_gravity="left"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:id="@+id/sociallogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"

            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/googleloginTv"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/google"
                android:gravity="center"
                android:layout_marginRight="5dp"
                />
            <Button
                android:id="@+id/facebookloginTv"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/facebook"


                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/orlinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sociallogin"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="wrap_content"
                android:text="----------------------------------------"
                android:lines="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="OR"
                android:gravity="center"
                android:lines="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.4"
                android:layout_height="wrap_content"
                android:text="----------------------------------------"
                android:lines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/orlinear"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:id="@+id/nameLiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sociallogin"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/firstname_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/firstEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textSize="15sp"
                        android:ems="10"
                        android:hint="@string/firstname" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/last_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/lastEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textSize="15sp"
                        android:ems="10"
                        android:hint="@string/lastname" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/emailEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                   />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/flag"
                    android:layout_marginTop="15dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="3dp">

                <EditText
                    android:id="@+id/mobileEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:ems="10"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                   />

            </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/passwordEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                  />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/nextBt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:padding="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/next"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
