<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="f.ratnatech.yowapplication.Activity.VerifyOTPActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/MyDarkToolbarStyle"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@android:color/white">

            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Verify Mobile"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_gravity="left"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/white" />
        </android.support.v7.widget.Toolbar>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/verify_mobile"/>

        <TextView
            android:id="@+id/verifymobileTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="13sp"
            android:text="@string/forgot_string"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/otp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <EditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:ems="10"
                android:hint="@string/otp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp">
            <TextView

                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Change Number"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Resend Code"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
