<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="f.ratnatech.yowapplication.Activity.EditProfileActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:popupTheme="@style/MyDarkToolbarStyle"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_gravity="left"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@drawable/blur_background"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/ic_profile" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/orlinear"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:id="@+id/nameLiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sociallogin"
            android:orientation="horizontal"
            android:weightSum="3"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstname_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3">

                <EditText
                    android:id="@+id/firstEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    android:ems="10"


                    android:hint="@string/firstname" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_layout"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lastEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    android:ems="10"

                    android:hint="@string/lastname" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/nameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.3"
                android:src="@drawable/ic_pencil_edit_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="2.7">

            <EditText
                android:id="@+id/emailEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                 />

        </android.support.design.widget.TextInputLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_pencil_edit_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/flag"
                android:layout_marginTop="15dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobile_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="2.7">

                <EditText
                    android:id="@+id/mobileEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:ems="10"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:enabled="false"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>
                <ImageView
                    android:id="@+id/mobileImg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_pencil_edit_button"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Places"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/liner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sociallogin"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="20dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="20dp"
                android:layout_weight="0.5"
                android:src="@drawable/home"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="home"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="Add Home"/>
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_pencil_edit_button"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sociallogin"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="20dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:src="@drawable/work"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="work"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="Work"/>
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_pencil_edit_button"/>
        </LinearLayout>
        <Button
            android:id="@+id/submitbtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorPrimary"
            android:text="NEXT"
            android:textSize="15sp"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
